--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /*================================*/
 body {
+  font-family: "Russo One", sans-serif;
   margin: 0;
 }
 
@@ -12,4 +13,43 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  position: relative;
+}
+.main-screen-bg .main-clock {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  z-index: 1;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.main-screen-bg .main-clock span {
+  font-size: 200px;
+  color: #ffffff;
+  font-weight: 500;
+  text-shadow: #ffffff 1px 0 15px;
+  margin: 0 80px;
+}
+.main-screen-bg .main-clock .double-dot {
+  color: #ffffff;
+  font-size: 100px;
+  text-shadow: #ffffff 1px 0 15px;
+}
+.main-screen-bg .date {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  z-index: 1;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.main-screen-bg .date span {
+  font-size: 100px;
+  color: #ffffff;
+  text-transform: capitalize;
+  margin: 0 50px;
 }
