--- a/style.scss
+++ b/style.scss
@@ -2,6 +2,7 @@
 
 /*================================*/
 body {
+    font-family: 'Russo One', sans-serif;
     margin: 0;
 }
 
@@ -15,4 +16,46 @@ body {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    position: relative;
+    & .main-clock {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+        position: absolute;
+        z-index: 1;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        & span {
+            font-size: 200px;
+            color: #ffffff;
+            font-weight: 500;
+            text-shadow: #ffffff 1px 0 15px;
+            margin: 0 80px;
+        }
+        & .double-dot {
+            color: #ffffff;
+            font-size: 100px;
+            text-shadow: #ffffff 1px 0 15px;
+        }
+        
+    }
+    & .date {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        position: absolute;
+        z-index: 1;
+        top: 80%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        & span {
+            font-size: 100px;
+            color: #ffffff;
+            text-transform: capitalize;
+            margin: 0 50px;
+        }
+    }
 }
