--- a/style.css
+++ b/style.css
@@ -55,3 +55,85 @@ body {
 }
 
 /*============= animate ========*/
+.pulse {
+  animation-name: pulse;
+  -webkit-animation-name: pulse;
+  animation-duration: 1s;
+  -webkit-animation-duration: 1s;
+  animation-iteration-count: infinite;
+  -webkit-animation-iteration-count: infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.9);
+    opacity: 0.7;
+  }
+  50% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(0.9);
+    opacity: 0.7;
+  }
+}
+/*===============responsive========*/
+@media only screen and (max-width: 1200px) {
+  .main-screen-bg .main-clock span {
+    font-size: 150px;
+    margin: 0 70px;
+  }
+}
+@media only screen and (max-width: 991px) {
+  .main-screen-bg .main-clock span {
+    font-size: 120px;
+    margin: 0 40px;
+  }
+  .main-screen-bg .main-clock .double-dot {
+    font-size: 80px;
+  }
+  .main-screen-bg .date span {
+    font-size: 80px;
+    margin: 0 30px;
+  }
+}
+@media only screen and (max-width: 678px) {
+  .main-screen-bg .main-clock span {
+    font-size: 100px;
+    margin: 0 20px;
+  }
+  .main-screen-bg .main-clock .double-dot {
+    font-size: 70px;
+  }
+  .main-screen-bg .date span {
+    font-size: 60px;
+    margin: 0 20px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .main-screen-bg .main-clock span {
+    font-size: 80px;
+    margin: 0 10px;
+  }
+  .main-screen-bg .main-clock .double-dot {
+    font-size: 50px;
+  }
+  .main-screen-bg .date span {
+    font-size: 40px;
+    margin: 0 10px;
+  }
+}
+@media only screen and (max-width: 360px) {
+  .main-screen-bg .main-clock span {
+    font-size: 60px;
+    margin: 0 5px;
+  }
+  .main-screen-bg .main-clock .double-dot {
+    font-size: 30px;
+  }
+  .main-screen-bg .date span {
+    font-size: 30px;
+    margin: 0 5px;
+  }
+}
