--- a/style.scss
+++ b/style.scss
@@ -61,43 +61,142 @@ body {
 }
 
 /*============= animate ========*/
-// .pulse{
-// 	animation-name: pulse;
-// 	-webkit-animation-name: pulse;	
+.pulse{
+	animation-name: pulse;
+	-webkit-animation-name: pulse;	
 
-// 	animation-duration: 1s;	
-// 	-webkit-animation-duration: 1s;
+	animation-duration: 1s;	
+	-webkit-animation-duration: 1s;
 
-// 	animation-iteration-count: infinite;
-// 	-webkit-animation-iteration-count: infinite;
-// }
+	animation-iteration-count: infinite;
+	-webkit-animation-iteration-count: infinite;
+}
 
-// @keyframes pulse {
-// 	0% {
-// 		transform: scale(0.9);
-// 		opacity: 0.7;		
-// 	}
-// 	50% {
-// 		transform: scale(1);
-// 		opacity: 1;	
-// 	}	
-// 	100% {
-// 		transform: scale(0.9);
-// 		opacity: 0.7;	
-// 	}			
-// }
+@keyframes pulse {
+	0% {
+		transform: scale(0.9);
+		opacity: 0.7;		
+	}
+	50% {
+		transform: scale(1);
+		opacity: 1;	
+	}	
+	100% {
+		transform: scale(0.9);
+		opacity: 0.7;	
+	}			
+}
 
-// @-webkit-keyframes pulse {
-// 	0% {
-// 		-webkit-transform: scale(0.95);
-// 		opacity: 0.7;		
-// 	}
-// 	50% {
-// 		-webkit-transform: scale(1);
-// 		opacity: 1;	
-// 	}	
-// 	100% {
-// 		-webkit-transform: scale(0.95);
-// 		opacity: 0.7;	
-// 	}			
-// }
+@-webkit-keyframes pulse {
+	0% {
+		-webkit-transform: scale(0.95);
+		opacity: 0.7;		
+	}
+	50% {
+		-webkit-transform: scale(1);
+		opacity: 1;	
+	}	
+	100% {
+		-webkit-transform: scale(0.95);
+		opacity: 0.7;	
+	}			
+}
+/*===============responsive========*/
+@media only screen and (max-width: 1200px){
+    .main-screen-bg {
+        & .main-clock {
+            & span {
+                font-size: 150px;
+                margin: 0 70px;
+            }
+            & .double-dot {
+            }
+            
+        }
+        & .date {
+            & span {
+            }
+        }
+    }
+}
+@media only screen and (max-width: 991px) {
+    .main-screen-bg {
+        & .main-clock {
+            & span {
+                font-size: 120px;
+                margin: 0 40px;
+            }
+            & .double-dot {
+                font-size: 80px;
+            }
+            
+        }
+        & .date {
+            & span {
+                font-size: 80px;
+                margin: 0 30px;
+            }
+        }
+    }
+    
+}
+@media only screen and (max-width: 678px) {
+    .main-screen-bg {
+        & .main-clock {
+            & span {
+                font-size: 100px;
+                margin: 0 20px;
+            }
+            & .double-dot {
+                font-size: 70px;
+            }
+            
+        }
+        & .date {
+            & span {
+                font-size: 60px;
+                margin: 0 20px;
+            }
+        }
+    }
+}
+@media only screen and (max-width: 480px) {
+    .main-screen-bg {
+        & .main-clock {
+            & span {
+                font-size: 80px;
+                margin: 0 10px;
+            }
+            & .double-dot {
+                font-size: 50px;
+            }
+            
+        }
+        & .date {
+            & span {
+                font-size: 40px;
+                margin: 0 10px;
+            }
+        }
+    }
+}
+@media only screen and (max-width: 360px) {
+    .main-screen-bg {
+        & .main-clock {
+            & span {
+                font-size: 60px;
+                margin: 0 5px;
+            }
+            & .double-dot {
+                font-size: 30px;
+            }
+            
+        }
+        & .date {
+            & span {
+                font-size: 30px;
+                margin: 0 5px;
+            }
+        }
+    }
+}
