--- a/style.scss
+++ b/style.scss
@@ -21,6 +21,8 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
+        margin: 0;
+        width: 1190px;
         
         position: absolute;
         z-index: 1;
@@ -108,6 +110,7 @@ body {
 @media only screen and (max-width: 1200px){
     .main-screen-bg {
         & .main-clock {
+            width: 980px;
             & span {
                 font-size: 150px;
                 margin: 0 70px;
@@ -115,7 +118,7 @@ body {
             & .double-dot {
             }
             & .seconds {
-                width: 290px;
+                width: 295px;
             }
         }
         & .date {
@@ -127,6 +130,8 @@ body {
 @media only screen and (max-width: 991px) {
     .main-screen-bg {
         & .main-clock {
+            width: 90%;
+            margin: 0 auto;
             & span {
                 font-size: 120px;
                 margin: 0 40px;
@@ -135,7 +140,7 @@ body {
                 font-size: 80px;
             }
             & .seconds {
-                width: 200px;
+                width: 225px;
             }
             
         }
@@ -148,9 +153,30 @@ body {
     }
     
 }
+@media only screen and (max-width: 768px) {
+    .main-screen-bg {
+        & .main-clock {
+            width: 660px;
+            & span {
+            }
+            & .double-dot {
+            }
+            & .seconds {
+                width: 214px;
+            }
+            
+        }
+        & .date {
+            & span {
+            }
+        }
+    }
+    
+}
 @media only screen and (max-width: 678px) {
     .main-screen-bg {
         & .main-clock {
+            width: 495px;
             & span {
                 font-size: 100px;
                 margin: 0 20px;
@@ -159,7 +185,31 @@ body {
                 font-size: 70px;
             }
             & .seconds {
-                width: auto;
+                width: 148px;
+            }
+            
+        }
+        & .date {
+            & span {
+                font-size: 60px;
+                margin: 0 10px;
+            }
+        }
+    }
+}
+@media only screen and (max-width: 510px) {
+    .main-screen-bg {
+        & .main-clock {
+            width: 465px;
+            & span {
+                font-size: 90px;
+                margin: 0 15px;
+            }
+            & .double-dot {
+                font-size: 60px;
+            }
+            & .seconds {
+                width: 130px;
             }
             
         }
@@ -170,16 +220,20 @@ body {
             }
         }
     }
-}
+} 
 @media only screen and (max-width: 480px) {
     .main-screen-bg {
         & .main-clock {
+            width: 350px;
             & span {
                 font-size: 80px;
                 margin: 0 10px;
             }
             & .double-dot {
                 font-size: 50px;
+            }
+            & .seconds {
+                width: 115px;
             }
             
         }
@@ -194,6 +248,7 @@ body {
 @media only screen and (max-width: 360px) {
     .main-screen-bg {
         & .main-clock {
+            width: 290px;
             & span {
                 font-size: 60px;
                 margin: 0 5px;
@@ -201,7 +256,9 @@ body {
             & .double-dot {
                 font-size: 30px;
             }
-            
+            & .seconds {
+                width: 73px;
+            }
         }
         & .date {
             & span {
